# pytest-its-whats-for-testing

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  slides.py
.github/workflows/: publish-package.yml
docker/: Dockerfile  test.sh
examples/assertions/: util.py
examples/fixtures/: ex_1.py  ex_4.py  ex_5.py
examples/hooks/: conftest.py  ex_2.py
examples/parametrization/: ex_1.py  ex_2.py  ex_3.py
examples/plugins/: ex_2.py
pytest_its_whats_for_testing/: slides.py
pytest_its_whats_for_testing/examples/assertions/: ex_2.py
pytest_its_whats_for_testing/examples/hooks/: conftest.py
pytest_its_whats_for_testing/examples/parametrization/: ex_1a.py  ex_1b.py  ex_3.py
pytest_its_whats_for_testing/examples/plugins/: ex_2.py
slides/: slide_examples.py  slides.py
talk/: slide_examples.py  slides.py  xdist_example.py
talk/assertion_rewriting/: ex_1.py  ex_2.py  ex_3.py  util.py
talk/examples/assertions/: ex_1.py  ex_3.py
talk/examples/fixtures/: conftest.py  ex_2.py  ex_6.py
talk/examples/hooks/: ex_1.py  ex_2.py
talk/examples/parametrization/: ex_2.py  ex_3.py  ex_4.py  ex_5.py
talk/examples/plugins/: ex_1.py  ex_4.py
talk/fixtures/: conftest.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py
talk/hooks/: conftest.py  ex_1.py  ex_2.py
talk/parametrization/: ex_1.py  ex_4.py
talk/plugins/: ex_1.py  ex_2.py  ex_3.py  xdist_example.py
